2015-04-04  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* src/arch/linux_sparc64.c: New file.
	* configure.ac (ROACH_ARCH): AC_Defined.
	* src/arch/syscall_names.h: New file.
	* src/syscall_names.c: Include syscall_names instead of
	<asm/unistd.h>.
	* src/arch/sparc_syscall_names.h: New file.
	* configure.ac: New supported architecture sparc64.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/Makefile.am (pkginclude_HEADERS): Install plugin.h
	under pkgincludedir instead of includedir.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Missing copyright notices added.

2015-04-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/inhibit/inhibit.c (plugin_add): Do not exit the
	process in library code.  Return a failure code instead.
	* src/plugins/fail_mem/fail_mem.c (plugin_add): Likewise.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/plugins/inhibit/inhibit.c (inhibit_hook): New function.

	* src/syscall_specs.c (roach_parse_scspec): Get a new argument
	endp, that stores the next character to the matched string.

	* src/plugins/inhibit/inhibit.c (plugin_add): Parse a scspec from
	the command line and pass it to roach_syscall_inhibit.

	* src/roach.h (struct roach_sc_spec_s): Added a new field `user'.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* src/syscall_specs.c (roach_match_scspec): New function.

2015-04-04  Jose E. Marchesi  <jemarch@gnu.org>

	* tests/test_scspecs.c (test_name_and_one_arg): New function.
	(test_name_only): Likewise.
	(test_name_and_two_args): Likewise.
	(test_name_hex_args): Likewise.
	(test_name_any_args): Likewise.
	(test_name_backrefs_args): Likewise.
	(test_name_comparison_args): Likewise.

	* tests/Makefile.am (check_PROGRAMS): test-scspecs added.
	(test_scspecs_SOURCES): Defined.
	(test_scspecs_LDFLAGS): Likewise.

	* tests/test_scspecs.c: New file.
	(main): New function.

	* src/Makefile.am (libroach_la_SOURCES): Added syscall_specs.c

	* src/syscall_specs.c: New file.